--- a/notebooks/Sentiment_Analysis.ipynb
+++ b/notebooks/Sentiment_Analysis.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "import gensim\n",
     "\n",
-    "train = True\n",
+    "train = False\n",
     "\n",
     "def clean_text(text):\n",
     "    clean = re.sub(r'http.*$', '', text)\n",
