--- a/draft/draft.tex
+++ b/draft/draft.tex
@@ -141,7 +141,9 @@ Shannon Quinn\titlenote{Corresponding author.}\\
 \maketitle
 \begin{abstract}
 
-Here is the abstract.
+Pre-Exposure Prophylaxis (PrEP) is a recently developed therapy for the prevention of Human Immunodeficiency Virus (HIV). The treatment is available as a pill named Truvada and is taken once a day for as much as 99\% protection from infection when exposed to HIV. While medically effective, PrEP suffers from high drug costs, HIV-related social stigma, and under-informed health providers and patients. This paper contributes a data mining and machine learning strategy that monitors Twitter social media data. Our results show that we can identify trends over time, and positive and negative PrEP related tweets. These results can be used by public health professionals to inform and protect at risk individuals from HIV. 
+
+%These methods may also be useful to identify and preempt HIV outbreaks before they reach epidemic levels.
 
 \end{abstract}
 
@@ -179,7 +181,17 @@ Introduce and literature review of:
 
  - social impact issues, efficacy, adherence issues, other STDs, Austin (Scott County) Indiana Outbreak as example
  
+ - High cost of actual drug medication, and unclear health insurance situation.
+ 
+ - Many health providers do not know about drug.
+ 
  - specifically other papers that did mining Twitter for HIV
+ 
+ - Here is a paper that did twitter data mining for flu prediction:
+ 
+ %http://snap.stanford.edu/soma2010/papers/soma2010_16.pdf
+ 
+ Talk about how it's harder to get feedback/ account for HIV infections compared with CDC baseline data for flu.
 
 
 2) Word2Vec, Doc2Vec
@@ -196,9 +208,7 @@ Introduce and literature review of:
 
 We sought to determine trends in HIV and PrEP discourse on twitter, to inform and coordinate public health efforts aiming to promote PrEP adoption and adherence for at-risk individuals. We collected 624,569 tweets containing at least one of the following words 'HIV', 'AIDS', 'truvada', 'prophylaxis', 'imtesting', 'PrEP' from Twitter's streaming API. The tweets were restricted to English language, and the collection dates spanned from the 47th week of 2015 to the 14th week of 2016. The tweets were and cleaned of exotic characters.
 
-
-
-We excluded non-English tweets, and also tweets that did not originate in Contiguous United States time zones. A subset of the tweets we collected had geolocation data available. We found that tweets were largely concentrated on US and Canadian metro areas (Figure 1).
+We excluded non-English tweets, and also tweets that did not originate in contiguous United States time zones. A subset of the tweets we collected had geolocation data available. We found that tweets were largely concentrated on US and Canadian metro areas (Figure 1).
 
 % Prior to topic modelling, tweets were cleaned of high and low frequency words, and transformed by Term Frequency Inverse Document Frequency (TFIDF) processing.
 
@@ -210,6 +220,8 @@ We excluded non-English tweets, and also tweets that did not originate in Contig
 
 \subsection{Word and Document Similarity}
 
+% TODO work this section Tuesday
+
 The first analyses that we performed sought to identify certain keywords, hashtags, tweets and users, that were discussing HIV and PrEP related contexts. Word2Vec and the related method, Paragraph2Vec are unsupervised machine learning methods that have performed well at embedding natural language in a semantic vector space. In our analysis, Word2Vec allows us to determine semantically similar words to a query word, while Paragraph2Vec allows us to determine similar tweets, users and hashtags to a query hashtag.
 
 % want to do a tSNE plot, but only on things that are relatively dissimilar. For example do HIV, truvada, STDs, testing related, awareness related, ... and throw away or merge labels 
@@ -217,19 +229,9 @@ The first analyses that we performed sought to identify certain keywords, hashta
 % table 1 - w2v PrEP
 \begin{table}
 \centering
-\caption{Cosine Similarity to 'truvada'}
+\caption{Cosine Similarity to 'PrEP'}
 \begin{tabular}{|l|c|} \hline
-Related Word & Cosine Similarity to 'truvada'\\ \hline
-truvada & 0.796666\\ \hline
-Truvada & 0.793999\\ \hline
-DoingIt & 0.738141\\ \hline
-WorldAidsDay & 0.728808\\ \hline
-WorldAIDSDay & 0.720910\\ \hline
-NancyReagan & 0.717667\\ \hline
-NBHAAD & 0.705061\\ \hline
-ART & 0.704300\\ \hline
-hiv & 0.702844\\ \hline
-HLM2016AIDS & 0.698698\\ \hline
+Related Word & Cosine Similarity to 'PrEP'\\ \hline
 \hline\end{tabular}
 \end{table}
 
@@ -239,16 +241,6 @@ HLM2016AIDS & 0.698698\\ \hline
 \caption{Cosine Similarity to '\#truvada'}
 \begin{tabular}{|l|c|} \hline
 Related Hashtag/Tweet & Cosine Similarity to '\#truvada'\\ \hline
-\#lgbtmedia16 & 0.739128\\ \hline
-\#hiv & 0.727602\\ \hline
-\#whereisprep & 0.707165\\ \hline
-\#truvada & 0.696113\\ \hline
-\#hivprevention & 0.636068\\ \hline
-702179860983189504 & 0.630055\\ \hline
-user-711275699529764864 & 0.629254\\ \hline
-708519265540907010 & 0.628778\\ \hline
-712032637024653313 & 0.628646\\ \hline
-\#harrogatehour & 	0.628547\\ \hline
 \hline\end{tabular}
 \end{table}
 
@@ -256,50 +248,76 @@ user-711275699529764864 & 0.629254\\ \hline
 
 \subsection{Time Domain}
 
-% PrEP related trends (2 topic time series worth)
-% World AIDs day as validation (1 topic time series)
-
-Next we sought to identify some temporal trends in PrEP related trends. We used Dynamic Topic Modelling to identify how certain topics change over time. We specified 10 topics and plotted representative words from two of the topics.
+Next we sought to identify some temporal trends in PrEP related trends. We used Dynamic Topic Modelling (DTM) to identify how certain topics change over time. In DTM, documents are grouped in several corpuses that represent different points in time. Latent Dirichlet Analysis (LDA) is then performed on each corpus, to extract a topic distribution. The posterior distribution from time $t_n$ is used as the prior for time $t_{n+1}$. We specified 10 topics and used each week's worth of tweets over a 30 week period as our time points.
 
 % might want to explain at a high level how DTM works here
 
-In topic 3 we see that the keyword 'prep' remains relatively constant, while 'prevention' and 'truvada' decline over time. 'hivaids' increases and then decreases in magnitude over the course of the time series (Figure 2). These dynamics may indicate short term events in hivaids and PrEP-related conversation on twitter over the time period studied.
+We identified two topics that showed relevant trends. In topic 5 we see that the keyword 'prep' remains relatively constant, while 'prevention' and 'truvada' decline over time. 'hivaids' increases and then decreases in magnitude over the course of the time series (Figure 3). These dynamics may indicate short term events in hivaids and PrEP-related conversation on twitter over the time period studied.
 
-We found that topic 4 captured several keywords related to World AIDS Day (Figure 3). We can see that all of these terms peak in the 47th week of 2015 and then decline into 2016. This correlates well with the actual date of World AIDS Day, December 1st. Furthermore,while December 1st is World AIDS day, the whole month of Decemeber is AIDS Awarness month. We are clearly seeing the word 'awarness' peak later and last longer that the word 'WorldAIDSDay' implying that it is correlated to the whole month of December. While we aren't specifically interested in World AIDS Day, or AIDS awareness month, to inform our understanding of PrEP discussion, this observation validates our ability to identify temporal events using DTM. 
-
-% breifly mention what was in the other topics (lots of AIDS related news announcements)
-
-
-
-% figure 2
+% figure 3
 \begin{figure}
 \centering
 \includegraphics[height=2.5in, width=3.5in]{DTMfig1}
 \caption{DTM topic 5, word prevalence over time. Date is YYYY-WW.}
 \end{figure}
 
-% figure 3
+We found that topic 4 captured several keywords related to World AIDS Day (Figure 4). We can see that all of these terms peak in the 47th week of 2015 and then decline into 2016. This correlates well with the actual date of World AIDS Day, December 1st. Furthermore,while December 1st is World AIDS day, the whole month of December is AIDS Awareness month. We are clearly seeing the word 'awareness' peak later and last longer that the word 'WorldAIDSDay' implying that it is correlated to the whole month of December. While we aren't specifically interested in World AIDS Day, or AIDS awareness month, to inform our understanding of PrEP discussion, this observation validates our ability to identify temporal events using DTM. 
+
+% figure 4
 \begin{figure}
 \centering
 \includegraphics[height=2.5in, width=3.5in]{DTMfig2}
 \caption{DTM topic 5, word prevalence over time. Date is YYYY-WW.}
 \end{figure}
 
+These results demonstrate our ability to extract relevant HIV and PrEP related information from twitter that accurately captures time-dependant fluctuations. Public health professionals should be able to monitor these temporal trends to determine the relative interest in PrEP related social media discourse. This could lead to a system for early detection of HIV outbreak detection, or other serious developments.
+
 \subsection{User Timeline Analysis}
 
- this will take time to complete (running download, prob 5 days, so approx April 19th)
+% TODO work this section (re download and re-run) Tuesday
 
-1 figure (heatmap of users vs topics)
+We wanted to identify what Twitter users that mentioned PrEP were discussing in their other tweets. We identified users that were most similar to PrEP according to our Paragraph2Vec results, and downloaded their most recent 3000 tweets. We took the top 300 users that had at least 200 words in the combined tweets of their tweet history. For each user, we concatenated all of their tweets, and performed LDA topic modelling on the set of user-time line documents.
 
-1 table (top words for 10 topics)
+When we examine a clustermap of users vs. topics, we see that the majority of these users are discussing topics 5, 1, and 4 (Figure 5). When we look up the top words in the corresponding topic distributions, we see that topics 1 and 4 seem to be related to republican party politics.
+
+% figure 5
+\begin{figure}
+\centering
+\includegraphics[height=2.5in, width=3.5in]{user_timeline_clustermap}
+\caption{Clustermap of users vs. topics for the top 300 users related to PrEP.}
+\end{figure}
+
+% table 3
+\begin{table*}
+\centering
+\caption{Topic modeling on PrEP-related users\' timelines.}
+\begin{tabular}{|l|c|c|c|c|c|c|c|c|c|c|} \hline
+Topic Number & Word 0 & Word 1 & Word 2 & Word 3 & Word 4 & Word 5 & Word 6 & Word 7 & Word 8 & Word 9\\ \hline
+0 & hivaids & condoms & bitcoin & stigma & cdcstd & kanyewest & nyhaad & entrepreneur & realestate & blacklivesmatter\\ \hline
+1 & ang & ng & tcot & ako & sa & ko & pjnet & realdonaldtrump & gopdebate & cruzcrew\\ \hline
+2 & fertility & infertility & meme & mxico & rp & deactivate & rail & roc & offensive & feedly\\ \hline
+3 & colombia & pozlivingbc & fe & repostapp & sprite & bccfe & thewalkingdead & npinchat & interior & wellness\\ \hline
+4 & businessinsider & stacks & noh & teaparty & sk & holi & alzheimers & caregiver & asa & guru\\ \hline
+5 & armenia & wordpress & georgia & topping & lgbtqia & yah & faction & checkout & narendramodi & examination\\ \hline
+6 & knitting & lista & naral & gust & worldbank & bigdata & haiku & vdeo & mhealth & hah\\ \hline
+7 & nigga & niggas & bernie & lmao & nhsengland & bitches & bae & uniteblue & il & gop\\ \hline
+8 & socialmedia & seo & socialmediamarketing & der & und & entrepreneur & ist & nowplaying & foxbusiness & enews\\ \hline
+9 & collage & mileycyrus & undetectable & ddlovato & casa & cnet & qotd & vacations & nashville & heros \\ \hline
+
+\hline\end{tabular}
+\end{table*}
+
+Together these results suggest that PrEP users are involved in political discussions, and are internationally focused.
+
+
 
 \subsection{Sentiment Classification}
 
-% top positive and negative example tweets
-% report accuracy
-% (potentially) report topic modeling on top postive and negative PrEP tweets
+% TODO work this section Tuesday (give example positive and negative tweets)
 
-Lastly we sought to create a classification scheme to classify the sentiment of tweets either positive or negative. This classifier would allow us to quickly identify positive and negative PrEP related tweets to guide public health efforts. We first performed Paragraph2Vec on both our PrEP related tweet corpus and on another tweet corpus that had binary sentiment labels, positive, or negative. Then we trained a simple logistic regression classifier on the paragraph-vectors. We found that our classifier had an accuracy of 69\% on a validation set.
+Lastly we trained a classifier to classify the sentiment of HIV and PrEP related tweets either positive or negative. This classifier would allow public health professionals to quickly identify positive and negative PrEP related tweets to guide HIV prevention efforts. We obtained a set of 1.6 million tweets with sentiment labels, either positive or negative from Sanders Analytics (http://www.sananalytics.com/lab/twitter-sentiment/). Then we trained a simple logistic regression classifier on 1.2 million paragraph-vectors from the sentiment dataset. We found that our classifier had an accuracy of 69\% using a portion of the sentiment tweets not used in training, as a validation set.
+
+ We chose to use a relatively simple classifier model (logistic regression) and stop training at
 
 We then used this classifier to classify our PrEP related tweets into positive or negative labels. We reported the most positive, and most negative tweets, by log(probability), on our full dataset, and on tweets that specifically mention either 'prep' or 'truvada' (Table 4).
 
@@ -310,7 +328,9 @@ We then used this classifier to classify our PrEP related tweets into positive o
 
 \section{Conclusions}
 
-Conclusions go here.
+- Moving towards HIV outbreak prediction. 
+
+- Automatically identifying PrEP adoption/adherence sentiment in US population.
 
 
 
